@@ -1,5 +1,5 @@
 /* Non-portable functions. L4 version.
-   Copyright (C) 2003 Free Software Foundation, Inc.
+   Copyright (C) 2003, 2007 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -31,14 +31,14 @@
    kernel thread.  */
 extern int pthread_create_from_l4_tid_np (pthread_t *thread, 
 					  const pthread_attr_t *attr,
-					  l4_thread_id_t tid, 
+					  _L4_thread_id_t tid, 
 					  void *(*start_routine)(void *), 
 					  void *arg);
 
 /* Add the thread TID to the internal kernel thread pool.  */
-int pthread_pool_add_np (l4_thread_id_t tid);
+extern int pthread_pool_add_np (_L4_thread_id_t tid);
 
 /* Get the first thread from the pool.  */
-l4_thread_id_t pthread_pool_get_np (void);
+extern _L4_thread_id_t pthread_pool_get_np (void);
 
 #endif /* bits/pthread-np.h */
